@@ -16,6 +16,7 @@ package io.trino.plugin.memory;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import io.airlift.units.DataSize;
+import io.trino.plugin.memory.MemoryInsertTableHandle.InsertMode;
 import io.trino.spi.HostAddress;
 import io.trino.spi.Page;
 import io.trino.spi.TrinoException;
@@ -28,10 +29,12 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.parallel.Execution;
 
+import java.util.List;
 import java.util.OptionalDouble;
 import java.util.OptionalLong;
 
 import static io.trino.spi.type.BigintType.BIGINT;
+import static io.trino.spi.type.IntegerType.INTEGER;
 import static io.trino.testing.TestingConnectorSession.SESSION;
 import static io.trino.testing.TestingPageSinkId.TESTING_PAGE_SINK_ID;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -59,7 +62,7 @@ public class TestMemoryPagesStore
     public void testCreateEmptyTable()
     {
         createTable(0L, 0L);
-        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, 0, OptionalLong.empty(), OptionalDouble.empty())).isEqualTo(ImmutableList.of());
+        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), 0, OptionalLong.empty(), OptionalDouble.empty())).isEqualTo(ImmutableList.of());
     }
 
     @Test
@@ -67,21 +70,21 @@ public class TestMemoryPagesStore
     {
         createTable(0L, 0L);
         insertToTable(0L, 0L);
-        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, POSITIONS_PER_PAGE, OptionalLong.empty(), OptionalDouble.empty()).size()).isEqualTo(1);
+        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), POSITIONS_PER_PAGE, OptionalLong.empty(), OptionalDouble.empty())).hasSize(1);
     }
 
     @Test
     public void testInsertPageWithoutCreate()
     {
         insertToTable(0L, 0L);
-        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, POSITIONS_PER_PAGE, OptionalLong.empty(), OptionalDouble.empty()).size()).isEqualTo(1);
+        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), POSITIONS_PER_PAGE, OptionalLong.empty(), OptionalDouble.empty())).hasSize(1);
     }
 
     @Test
     public void testReadFromUnknownTable()
     {
         assertThatThrownBy(() -> {
-            pagesStore.getPages(0L, 0, 1, new int[] {0}, 0, OptionalLong.empty(), OptionalDouble.empty());
+            pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), 0, OptionalLong.empty(), OptionalDouble.empty());
         })
                 .isInstanceOf(TrinoException.class);
     }
@@ -90,8 +93,8 @@ public class TestMemoryPagesStore
     public void testTryToReadFromEmptyTable()
     {
         createTable(0L, 0L);
-        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, 0, OptionalLong.empty(), OptionalDouble.empty())).isEqualTo(ImmutableList.of());
-        assertThatThrownBy(() -> pagesStore.getPages(0L, 0, 1, new int[] {0}, 42, OptionalLong.empty(), OptionalDouble.empty()))
+        assertThat(pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), 0, OptionalLong.empty(), OptionalDouble.empty())).isEqualTo(ImmutableList.of());
+        assertThatThrownBy(() -> pagesStore.getPages(0L, 0, 1, new int[] {0}, List.of(INTEGER), 42, OptionalLong.empty(), OptionalDouble.empty()))
                 .isInstanceOf(TrinoException.class)
                 .hasMessageMatching("Expected to find.*");
     }
@@ -130,6 +133,15 @@ public class TestMemoryPagesStore
                 .hasMessageMatching("Memory limit.*");
     }
 
+    @Test
+    public void testTruncate()
+    {
+        createTable(0L, 0L);
+        insertToTable(0L, createOneMegaBytePage(), 0L);
+        truncateTable(0L, 0L);
+        insertToTable(0L, createOneMegaBytePage(), 0L);
+    }
+
     private void insertToTable(long tableId, Long... activeTableIds)
     {
         insertToTable(tableId, createPage(), activeTableIds);
@@ -156,6 +168,16 @@ public class TestMemoryPagesStore
         pageSink.finish();
     }
 
+    private void truncateTable(long tableId, Long... activeTableIds)
+    {
+        ConnectorPageSink pageSink = pageSinkProvider.createPageSink(
+                MemoryTransactionHandle.INSTANCE,
+                SESSION,
+                createOverwriteMemoryInsertTableHandle(tableId, activeTableIds),
+                TESTING_PAGE_SINK_ID);
+        pageSink.finish();
+    }
+
     private static ConnectorOutputTableHandle createMemoryOutputTableHandle(long tableId, Long... activeTableIds)
     {
         return new MemoryOutputTableHandle(tableId, ImmutableSet.copyOf(activeTableIds));
@@ -163,7 +185,12 @@ public class TestMemoryPagesStore
 
     private static ConnectorInsertTableHandle createMemoryInsertTableHandle(long tableId, Long[] activeTableIds)
     {
-        return new MemoryInsertTableHandle(tableId, ImmutableSet.copyOf(activeTableIds));
+        return new MemoryInsertTableHandle(tableId, InsertMode.APPEND, ImmutableSet.copyOf(activeTableIds));
+    }
+
+    private static ConnectorInsertTableHandle createOverwriteMemoryInsertTableHandle(long tableId, Long[] activeTableIds)
+    {
+        return new MemoryInsertTableHandle(tableId, InsertMode.OVERWRITE, ImmutableSet.copyOf(activeTableIds));
     }
 
     private static Page createPage()
